--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,6 +4,40 @@
   box-sizing: border-box;
 }
 body{
-  background: navy;
   color: #fff;
+}
+nav{
+  background: linear-gradient(to right, red, green);
+  display: flex;
+  justify-content: center;
+  padding: 25px 0;
+}
+.content-wrap{
+  display: flex;
+  justify-content: center;
+  padding: 15em 35em;
+  justify-content: space-around;
+}
+.cont1{
+  display: flex;
+  background:red;
+  padding: 2em;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.cont1:hover{
+  opacity: .7;
+}
+.cont1 label{
+  font-size: 1.5em;
+  font-weight: bold;
+}
+.white{
+  background: #fff;
+  color: #000;
+  margin-top: -100px;
+  font-size: 2em;
+}
+.green{
+  background: green;
 }
